Header: next try to fix old browsers

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -127,7 +127,11 @@
 .menuItemParentChildren {
   list-style: none;
 
-  .navItemParent:hover &, .navItemParent:focus-within & {
+  .navItemParent:hover & {
+    height: auto;
+  }
+
+  .navItemParent:focus-within & {
     height: auto;
   }
 
