Button: fix font weight

--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -44,6 +44,7 @@
   color: inherit;
   font-size: inherit;
   font-family: inherit;
+  font-weight: inherit;
   border: none;
   cursor: pointer;
   box-shadow: 0 0.1em 0 var(--bg-color), 0 0.2em 0 currentColor;
