Pledge: add "general" pledge

--- a/src/components/Forms/Pledge/style.module.less
+++ b/src/components/Forms/Pledge/style.module.less
@@ -8,3 +8,9 @@
     position: absolute;
     top: calc(-@headerHeight - 2rem);
 }
+
+.formWrapperWithSlider {
+     @media (max-width: @breakPointM) {
+        padding: 2rem;
+    }
+}
