TextInput: add textarea

--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -1,6 +1,6 @@
 @import '../../style/vars.less';
 
-.textInput, .textInputInline {
+.textInput, .textInputInline, .textarea {
     background: @white ;
     border: none;
     color: @red;
@@ -26,4 +26,10 @@
 
 .textInputInline {
     font-size: @fontSizeS;
+}
+
+.textarea {
+    font-size: @fontSizeS;
+    resize: vertical;
+    min-height: 6rem;
 }
