--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -34,3 +34,14 @@
     resize: vertical;
     min-height: 6rem;
 }
+
+.hideNumberArrows {
+    &[type='number'] {
+        -moz-appearance:textfield;
+    }
+
+    &::-webkit-outer-spin-button,
+    &::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+    }
+}
