--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -1,4 +1,5 @@
 @import '../../style/vars.less';
+@inputWidth: 25rem;
 
 .textInput, .textInputInline, .textarea {
     background: @white ;
@@ -9,7 +10,7 @@
     padding: @buttonPadding;
     line-height: inherit;
     max-width: 100%;
-    width: 25rem;
+    width: @inputWidth;
 
     &::placeholder {
         color: @grey;
@@ -44,4 +45,11 @@
     &::-webkit-inner-spin-button {
         -webkit-appearance: none;
     }
+}
+
+.charLeftDisplay {
+    font-weight: normal;
+    text-align: right;
+    max-width: 100%;
+    width: @inputWidth;
 }
