Sections: font size tweaks, "normal" text bigger

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -118,7 +118,11 @@
     word-wrap: break-word;
     max-width: 100%;
     .contentGridSlim();
-    font-size: @fontSizeS;
+    font-size: @fontSizeM;
+
+    @media (max-width: @breakPointS) {
+        font-size: @fontSizeS;
+    }
 
     >:last-child {
         margin-bottom: 0;
@@ -142,9 +146,10 @@
 }
 
 .innerTextHuge {
-    font-weight: bold;
-    @media (min-width: @breakPointM) {
-        font-size: @fontSizeL;
+    font-size: @fontSizeL;
+
+    @media (max-width: @breakPointM) {
+        font-size: @fontSizeM;
     }
 }
 
