--- a/src/components/Forms/FinallyMessage/style.module.less
+++ b/src/components/Forms/FinallyMessage/style.module.less
@@ -3,6 +3,8 @@
 .message {
   background: var(--secondary-color);
   color: var(--text-on-secondary-color);
+  --font-color: var(--text-on-secondary-color);
+  --bg-color: var(--secondary-color);
   padding: 1em;
   position: relative;
   z-index: 1;
@@ -11,6 +13,12 @@
 .messageInner {
   display: flex;
   align-items: center;
+
+  p {
+    &:first-child {
+      margin-top: 0;
+    }
+  }
 }
 
 .savingIndicator {
