Sections: move newsletter illustrations

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -38,7 +38,7 @@
         color: @red;
 
         &.sectionNewsletter {
-            background-image: url('./newsletter_red.svg');
+            background-image: url('./backgrounds/newsletter_red.svg');
         }
     }
 
@@ -59,7 +59,7 @@
 
     &:nth-child(3n+2), &:nth-child(3n+3), &:only-child {
         &.sectionNewsletter {
-            background-image: url('./newsletter_yellow.svg');
+            background-image: url('./backgrounds/newsletter_yellow.svg');
         }
     }
 
