AboutUs: absolute positioning experiment

--- a/src/components/AboutUs/style.module.less
+++ b/src/components/AboutUs/style.module.less
@@ -63,3 +63,11 @@
   padding-bottom: 100%;
   margin: 0 0 1rem;
 }
+
+.someButtons {
+  position: absolute;
+  z-index: 1;
+  top: -1.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
