CTAButton: slightly better position for pointing illustration on big screens

--- a/src/components/Layout/CTAButton/style.module.less
+++ b/src/components/Layout/CTAButton/style.module.less
@@ -2,6 +2,7 @@
 
 .container {
   &.hasIllustration {
+    margin-bottom: 1.8rem;
     @media (max-width: @breakPointS) {
       margin-bottom: 5rem;
     }
