--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -2,6 +2,7 @@
 
 .body {
     font-weight: bold;
+    position: relative;
 
     &.showCTA {
         display: grid;
@@ -113,4 +114,37 @@
             text-shadow: @w @w 0 var(--bg-color), -@w @w 0 var(--bg-color), @w -@w 0 var(--bg-color), -@w -@w 0 var(--bg-color);
         }
     }
+}
+
+.eyeCatcher {
+    position: absolute;
+    left: 100%;
+    top: -8rem;
+    margin-left: -3rem;
+
+    color: var(--text-on-secondary-color);
+    height: 15rem;
+    width: 15rem;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    transform: rotate(-5deg);
+
+    p {
+        margin: 0;
+    }
+}
+
+.eyeCatcherContent {
+    position: relative;
+    z-index: 1;
+}
+
+.eyeCatcherBackground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    fill: var(--secondary-color);
 }
