--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -68,6 +68,18 @@
   }
 }
 
+.goalInbetween {
+  height: 100%;
+  width: 0;
+  border-left: 0.5rem dashed var(--secondary-color);
+  background: var(--bg-color);
+  position: absolute;
+  top: -1rem;
+  transform: rotate(-3deg);
+  padding: 0;
+  margin: -0.5rem;
+}
+
 .starts {
   font-size: @fontSizeXXXL;
   position: absolute;
