--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -68,12 +68,12 @@
 }
 
 .goalInbetween {
-    height: 100%;
+    height: 5rem;
     width: 0;
     border-left: .5rem dashed var(--secondary-color);
     background: var(--bg-color);
     position: absolute;
-    top: -1rem;
+    top: -.25rem;
     transform: rotate(-3deg);
     padding: 0;
     margin: -.5rem;
