CampaignVisualisations: fix classname

--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -46,7 +46,7 @@
         padding: 0.5rem;
     }
 
-    &.hasStarted {
+    &.hasNotStarted {
         color: var(--font-color);
 
         &::before {
