--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -70,7 +70,7 @@
 }
 
 .goalInbetween {
-    height: 5rem;
+    height: 6.5rem;
     width: 0;
     border-left: .5rem dashed var(--secondary-color);
     background: var(--bg-color);
@@ -79,6 +79,8 @@
     transform: rotate(-3deg);
     padding: 0;
     margin: -.5rem;
+    z-index: 2;
+    cursor: pointer;
 }
 
 .starts {
@@ -101,6 +103,7 @@
     color: var(--text-on-secondary-color);
     display: flex;
     transition: width 1s ease;
+    z-index: 3;
 
     &::before {
         content: '';
