--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -45,13 +45,32 @@
   }
 }
 
-.barGoalLabel {
+.barGoalBarInbetween {
   position: absolute;
   z-index: 2;
   top: 0;
   left: 0;
   text-align: right;
   padding: 0.5rem;
+}
+
+.goal {
+  position: absolute;
+  color: var(--font-color);
+  top: 0.5rem;
+  right: 0.5rem;
+}
+
+.barGoalBarInbetweenLabel {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+
+  &Outside {
+    right: auto;
+    left: calc(100% + 0.5rem);
+    color: var(--font-color);
+  }
 }
 
 .barGoalBar {
@@ -69,19 +88,19 @@
   background: var(--font-color);
 }
 
-.goalInbetween {
-  height: 6.5rem;
-  width: 0;
-  border-left: 0.5rem dashed var(--secondary-color);
-  background: var(--bg-color);
-  position: absolute;
-  top: -0.25rem;
-  transform: rotate(-3deg);
-  padding: 0;
-  margin: -0.5rem;
-  z-index: 2;
-  cursor: pointer;
-}
+// .goalInbetween {
+//     height: 6.5rem;
+//     width: 0;
+//     border-left: .5rem dashed var(--secondary-color);
+//     background: var(--bg-color);
+//     position: absolute;
+//     top: -.25rem;
+//     transform: rotate(-3deg);
+//     padding: 0;
+//     margin: -.5rem;
+//     z-index: 2;
+//     cursor: pointer;
+// }
 
 .starts {
   font-size: @fontSizeXXXL;
