Tooltip: style overwrites

--- a/src/components/Tooltip/style.module.less
+++ b/src/components/Tooltip/style.module.less
@@ -1,3 +1,5 @@
+@import '../style/vars.less';
+
 .arrow {
   @distance: -0.5rem;
   position: absolute;
@@ -42,4 +44,7 @@
 .tooltipContent {
   z-index: 1;
   position: relative;
+  font-size: @fontSizeM;
+  text-shadow: none;
+  color: var(--bg-color);
 }
