CampaignVisualisations: tooltip fix

--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -134,8 +134,7 @@
     transform: skewX(-3.2deg) skewY(0.3deg) rotate(0.2deg);
   }
 
-  > div,
-  span {
+  .barCurrentLabel {
     position: absolute;
     z-index: 1;
     bottom: -0.3rem;
@@ -143,8 +142,7 @@
   }
 
   &.outside {
-    > div,
-    span {
+    .barCurrentLabel {
       left: calc(100% + 1rem);
       right: auto;
       color: var(--font-color);
