--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -82,25 +82,28 @@
   border: 1px solid var(--font-color);
 }
 
+.goalUnBuffered {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 0px;
+  padding: 0 1rem;
+  margin: 0 0 0 -1rem;
+
+  &:before {
+    transform: skewX(-3.2deg) skewY(-0.3deg) rotate(0.2deg);
+    content: '';
+    position: absolute;
+    height: 100%;
+    border-right: dashed 1px var(--font-color);
+  }
+}
+
 .barGoalUnbuffered {
   position: absolute;
   height: 100%;
   background: var(--font-color);
 }
-
-// .goalInbetween {
-//     height: 6.5rem;
-//     width: 0;
-//     border-left: .5rem dashed var(--secondary-color);
-//     background: var(--bg-color);
-//     position: absolute;
-//     top: -.25rem;
-//     transform: rotate(-3deg);
-//     padding: 0;
-//     margin: -.5rem;
-//     z-index: 2;
-//     cursor: pointer;
-// }
 
 .starts {
   font-size: @fontSizeXXXL;
