CampaignVisualisations: add hint

--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -233,3 +233,9 @@
         margin-top: 4rem;
     }
 }
+
+.hint {
+    margin-bottom: 1rem;
+    font-weight: normal;
+    font-size: @fontSizeS;
+}
