--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -33,6 +33,7 @@
 
 .barGoal {
     position: absolute;
+    background: var(--font-color);
     color: var(--bg-color);
     height: 5rem;
     width: 100%;
@@ -41,6 +42,7 @@
     justify-content: flex-end;
 
     &.hasNotStarted {
+        background: var(--bg-color);
         color: var(--font-color);
     }
 }
@@ -56,7 +58,6 @@
 
 .goal {
     position: absolute;
-    color: var(--font-color);
     top: .5rem;
     right: .5rem;
 }
@@ -91,11 +92,10 @@
     margin: 0 0 0 -1rem;
 
     &:before {
-        transform: skewX(-3.2deg) skewY(-0.3deg) rotate(0.2deg);
         content: '';
         position: absolute;
         height: 100%;
-        border-right: dashed 1px var(--font-color);
+        border-right: dashed 1px var(--bg-color);
     }
 }
 
