Sections: secondary color on yellow sections to be blue instead of pink

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -32,7 +32,7 @@
     &:nth-child(3n+1):not(:only-child) {
         --bg-color: @yellow;
         --font-color: @red;
-        --secondary-color: @pink;
+        --secondary-color: @blueBright;
         --text-on-secondary-color: @yellow;
         background-color: @yellow;
         color: @red;
