--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -213,6 +213,10 @@
 .eyeCatcherContent {
     position: relative;
     z-index: 1;
+
+    p {
+        line-height: 1.3;
+    }
 }
 
 .eyeCatcherLink {
