--- a/src/components/AboutUs/style.module.less
+++ b/src/components/AboutUs/style.module.less
@@ -117,3 +117,15 @@
 .socialMediaButton {
     font-size: @fontSizeS;
 }
+
+.role {
+    font-weight: normal;
+}
+
+.label {
+    font-size: @fontSizeS;
+
+    @media(max-width: @breakPointS) {
+        font-size: @fontSizeXS;
+    }
+}
