AboutUs: add roles

--- a/src/components/AboutUs/style.module.less
+++ b/src/components/AboutUs/style.module.less
@@ -116,3 +116,15 @@
 .socialMediaButton {
   font-size: @fontSizeS;
 }
+
+.role {
+  font-weight: normal;
+}
+
+.label {
+  font-size: @fontSizeS;
+
+  @media (max-width: @breakPointS) {
+    font-size: @fontSizeXS;
+  }
+}
