--- a/src/components/AboutUs/style.module.less
+++ b/src/components/AboutUs/style.module.less
@@ -124,6 +124,7 @@
 
 .label {
     font-size: @fontSizeS;
+    hyphens: auto;
 
     @media(max-width: @breakPointS) {
         font-size: @fontSizeXS;
