--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -60,6 +60,11 @@
   position: absolute;
   top: 0.5rem;
   right: 0.5rem;
+  text-align: right;
+
+  @media (max-width: @breakPointS) {
+    font-size: @fontSizeS;
+  }
 }
 
 .barGoalBarInbetweenLabel {
@@ -190,6 +195,9 @@
     top: auto;
     bottom: 100%;
     margin-bottom: -1rem;
+    width: 8rem;
+    height: 8rem;
+    margin-left: -6.5rem;
   }
 
   p {
@@ -217,9 +225,14 @@
 .eyeCatcherContent {
   position: relative;
   z-index: 1;
+  padding: 0.5rem;
 
   p {
     line-height: 1.3;
+  }
+
+  @media (max-width: @breakPointS) {
+    font-size: @fontSizeXS;
   }
 }
 
@@ -236,9 +249,9 @@
   fill: var(--secondary-color);
 }
 
-.sectionInnerHasCta {
+.sectionInnerHasEyeCatcher {
   @media (max-width: @breakPointM) {
-    margin-top: 4rem;
+    margin-top: 1rem;
   }
 }
 
@@ -246,4 +259,10 @@
   margin-bottom: 1rem;
   font-weight: normal;
   font-size: @fontSizeS;
+
+  @media (max-width: @breakPointS) {
+    .sectionInnerHasEyeCatcher & {
+      padding-right: 6rem;
+    }
+  }
 }
