CampaignVisualisations: Cleanup, delete unused stuff

--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -91,23 +91,7 @@
   }
 }
 
-.goalUnBuffered {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 0px;
-  padding: 0 1rem;
-  margin: 0 0 0 -1rem;
-
-  &:before {
-    content: '';
-    position: absolute;
-    height: 100%;
-    border-right: dashed 1px var(--bg-color);
-  }
-}
-
-.barGoalUnbuffered {
+.barGoalInbetween {
   position: absolute;
   height: 100%;
   background: var(--font-color);
