TextInput: fix for small screens

--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -12,6 +12,10 @@
     max-width: 100%;
     width: @inputWidth;
 
+    @media (max-width: @breakPointS) {
+        width: 100%;
+    }
+
     &::placeholder {
         color: @grey;
     }
