Sections: hero image not fixed so it's cut in a nicer way

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -303,7 +303,7 @@
 }
 
 .heroImage {
-    position: fixed !important;
+    position: absolute !important;
     top: 0;
     left: 0;
     height: 100%;
