Footer: nicer hover color

--- a/src/components/Layout/Footer/style.module.less
+++ b/src/components/Layout/Footer/style.module.less
@@ -9,7 +9,7 @@
   font-size: @fontSizeM;
   align-content: start;
   position: relative;
-  --secondary-color: @pink;
+  --secondary-color: @blueBright;
 }
 
 .columnLeft {
