--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -325,3 +325,12 @@
 .sectionWithHeroImage {
   text-shadow: 0 0 0.8rem fade(@yellow, 90);
 }
+
+.spaceBetweenBlogAndCTA {
+  height: 2rem;
+  grid-column: 3;
+
+  @media (max-width: @breakPointS) {
+    height: 1rem;
+  }
+}
