Layout: make it wider

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -1,7 +1,7 @@
 @import '../../style/vars.less';
 
 .section {
-    padding: 5rem 1rem 10rem;
+    padding: 5rem var(--grid-gap) 10rem;
     position: relative;
     overflow: hidden;
 
@@ -11,7 +11,6 @@
 
     &Video {
         padding-bottom: 5rem;
-
 
         .sectionBody {
             position: relative;
