Signatures: shift around stuff to make in more accessible

--- a/src/components/Forms/Signatures/style.module.less
+++ b/src/components/Forms/Signatures/style.module.less
@@ -6,7 +6,7 @@
 }
 
 .textInputContainer {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .form {
@@ -15,5 +15,6 @@
 }
 
 .hint {
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
+    font-size: @fontSizeM;
 }
