SelfScan: move form inside more complex layout

--- a/src/components/Forms/SelfScan/style.module.less
+++ b/src/components/Forms/SelfScan/style.module.less
@@ -31,3 +31,8 @@
 .visualisation {
     grid-column: 5 / wide-end;
 }
+
+.headingSelfScan {
+    margin: 4rem 0 1rem;
+    font-size: @fontSizeM;
+}
