FinallyMessage: increase font size a bit

--- a/src/components/Forms/FinallyMessage/style.module.less
+++ b/src/components/Forms/FinallyMessage/style.module.less
@@ -8,6 +8,10 @@
     padding: 1em;
     position: relative;
     z-index: 1;
+
+    @media (min-width: @breakPointM) {
+        font-size: @fontSizeM;
+    }
 }
 
 .messageInner {
