Sections: add blue version of crowd collect background

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -60,6 +60,14 @@
         &.sectionNewsletter {
             background-image: url('./backgrounds/newsletter_yellow.svg');
         }
+
+        &.sectionCrowdCollect {
+            background-image: url('./backgrounds/crowd_collect_blue_desktop.svg');
+
+            @media (max-width: 900px) {
+                background-image: url('./backgrounds/crowd_collect_blue_mobile.svg');
+            }
+        }
     }
 
     &.sectionNewsletter.sectionNewsletter {
