Sections: fix crowd collect background image for red sections

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -56,19 +56,23 @@
     color: @red;
   }
 
-  &:nth-child(3n + 2),
+  &:nth-child(3n + 1):not(:only-child),
   &:nth-child(3n + 3),
   &:only-child {
-    &.sectionNewsletter {
-      background-image: url('./backgrounds/newsletter_yellow.svg');
-    }
-
     &.sectionCrowdCollect {
       background-image: url('./backgrounds/crowd_collect_blue_desktop.svg');
 
       @media (max-width: 900px) {
         background-image: url('./backgrounds/crowd_collect_blue_mobile.svg');
       }
+    }
+  }
+
+  &:nth-child(3n + 2),
+  &:nth-child(3n + 3),
+  &:only-child {
+    &.sectionNewsletter {
+      background-image: url('./backgrounds/newsletter_yellow.svg');
     }
   }
 
