--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -130,10 +130,12 @@
 
   .navItemParent:hover & {
     height: auto;
+    width: 30rem;
   }
 
   .navItemParent:focus-within & {
     height: auto;
+    width: 30rem;
   }
 
   @media (max-width: @breakPointM) {
@@ -142,11 +144,11 @@
 
   @media (min-width: @breakPointM) {
     height: 1px;
+    width: 1px;
     padding: 0;
     text-align: right;
     position: absolute;
     top: 100%;
-    width: 30rem;
     right: -2rem;
     overflow: hidden;
   }
