QuestionUbi: add text input

--- a/src/components/QuestionUbi/style.module.less
+++ b/src/components/QuestionUbi/style.module.less
@@ -17,3 +17,12 @@
   display: flex;
   justify-content: flex-end;
 }
+
+.questionInput {
+  color: inherit;
+  background: transparent;
+  padding: none;
+  font-size: inherit;
+  font-weight: inherit;
+  width: 100%;
+}
