QuestionUbi: better textarea positioning

--- a/src/components/QuestionUbi/style.module.less
+++ b/src/components/QuestionUbi/style.module.less
@@ -20,10 +20,14 @@
 .questionInput {
   color: inherit;
   background: transparent;
-  padding: none;
+  padding: 2rem;
   font-size: inherit;
   font-weight: inherit;
   width: 100%;
+
+  &:focus {
+    box-shadow: none;
+  }
 }
 
 .nameInput {
