--- a/src/components/QuestionUbi/style.module.less
+++ b/src/components/QuestionUbi/style.module.less
@@ -4,6 +4,17 @@
   border-radius: 50%;
   display: block;
   margin-top: 1rem;
+  object-fit: cover;
+  object-position: center;
+}
+
+.avatarUploadButton {
+  visibility: hidden;
+}
+
+.avatarImageContainer {
+  position: relative;
+  cursor: pointer;
 }
 
 .belowBubble {
