--- a/src/components/QuestionUbi/style.module.less
+++ b/src/components/QuestionUbi/style.module.less
@@ -10,8 +10,6 @@
 
 .avatarUploadButton {
     visibility: hidden;
-
-
 }
 
 .avatarImageContainer {
@@ -25,9 +23,17 @@
     grid-gap: 2rem;
 }
 
-.sendButton {
+.submitButtonContainer {
     align-self: start;
     margin-top: 1.7rem;
+}
+
+.submitButton {
+    visibility: hidden;
+}
+
+.submitButtonDirty {
+    visibility: visible;
 }
 
 .questionInput {
