QuestionUbi: hide submit button when there is no question

--- a/src/components/QuestionUbi/style.module.less
+++ b/src/components/QuestionUbi/style.module.less
@@ -23,9 +23,17 @@
   grid-gap: 2rem;
 }
 
-.sendButton {
+.submitButtonContainer {
   align-self: start;
   margin-top: 1.7rem;
+}
+
+.submitButton {
+  visibility: hidden;
+}
+
+.submitButtonDirty {
+  visibility: visible;
 }
 
 .questionInput {
