QuestionUbi: get userId from queryString

--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -13,6 +13,7 @@ body {
   color: @red;
   --bg-color: @grey;
   --font-color: @red;
+  --font-color-secondary: @blueBright;
   --secondary-color: @yellow;
   --text-on-secondary-color: @red;
   --grid-gap: 1rem;
