Tooltip: max-width for content

--- a/src/components/Tooltip/style.module.less
+++ b/src/components/Tooltip/style.module.less
@@ -40,7 +40,6 @@
     .content:hover ~ & {
         visibility: visible;
     }
-
 }
 
 .tooltipContent {
@@ -49,5 +48,6 @@
     font-size: @fontSizeM;
     text-shadow: none;
     color: var(--bg-color);
+    max-width: 20rem;
 }
 
