TextInput: option to add explanation (tooltip (i) )

--- a/src/components/Forms/LabelInputErrorWrapper/style.module.less
+++ b/src/components/Forms/LabelInputErrorWrapper/style.module.less
@@ -1,7 +1,13 @@
+@import '../../style/vars.less';
+
 .container {
     display: block;
 }
 
 .error {
     margin-top: .2rem;
+}
+
+.tooltip {
+    font-size: @fontSizeS;
 }
