Speechbubble: add small mode

--- a/src/components/QuestionUbi/Speechbubble/style.module.less
+++ b/src/components/QuestionUbi/Speechbubble/style.module.less
@@ -9,6 +9,10 @@
   padding: 0 0 2rem;
   position: relative;
   z-index: 1;
+
+  .small & {
+    padding-bottom: 1rem;
+  }
 }
 
 .svg {
@@ -30,6 +34,10 @@
   bottom: 2rem;
   left: 0;
   right: 0;
+
+  .small & {
+    bottom: 1rem;
+  }
 }
 
 .svgBottom {
@@ -37,4 +45,8 @@
   height: 2.1rem;
   left: 0;
   right: 0;
+
+  .small & {
+    height: 1rem;
+  }
 }
