--- a/src/components/QuestionUbi/CreateQuestion/style.module.less
+++ b/src/components/QuestionUbi/CreateQuestion/style.module.less
@@ -56,6 +56,7 @@
     display: grid;
     grid-template-columns: 5rem 1fr 1fr;
     grid-gap: 0 2rem;
+    margin-bottom: 2rem;
 }
 
 .submitButtonContainer {
