--- a/src/components/QuestionUbi/ListQuestions/style.module.less
+++ b/src/components/QuestionUbi/ListQuestions/style.module.less
@@ -13,8 +13,8 @@
 }
 
 .avatar {
-  width: 3rem;
-  height: 3rem;
+  width: 2rem;
+  height: 2rem;
   flex: 0 0 auto;
   margin-right: 0.5rem;
 }
@@ -22,10 +22,12 @@
 .belowSpeechBubble {
   display: flex;
   align-items: center;
+  margin-top: 0.5rem;
 }
 
 .name {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  font-size: @fontSizeXS;
 }
