--- a/src/components/QuestionUbi/CreateQuestion/style.module.less
+++ b/src/components/QuestionUbi/CreateQuestion/style.module.less
@@ -7,6 +7,11 @@
     margin-top: 1rem;
     transition: transform .3s;
     pointer-events: all;
+
+    @media (max-width: @breakPointM) {
+        height: 4rem;
+        width: 4rem;
+    }
 }
 
 .avatarUploadButton {
@@ -33,6 +38,14 @@
     font-size: @fontSizeS;
     pointer-events: all;
 
+    @media (max-width: @breakPointM) {
+        transform: rotate(70deg);
+        transform-origin: 0 0;
+        top: 100%;
+        left: 2rem;
+        font-size: @fontSizeXS;
+    }
+
     &:hover {
         color: @blueBright;
     }
@@ -46,6 +59,13 @@
         bottom: 0.8rem;
         width: 3rem;
         height: 2rem;
+
+        @media (max-width: @breakPointM) {
+            left: -2.1rem;
+            bottom: -0.8rem;
+            right: auto;
+            transform: rotate(-20deg);
+        }
     }
 }
 
@@ -54,6 +74,11 @@
     grid-template-columns: 5rem 1fr 1fr;
     grid-gap: 0 2rem;
     margin-bottom: 2rem;
+
+    @media (max-width: @breakPointM) {
+        grid-template-columns: 4rem 1fr;
+        grid-gap: 0 1rem;
+    }
 }
 
 .submitButtonContainer {
@@ -61,6 +86,17 @@
     grid-column: 3;
     justify-self: end;
     margin-bottom: 0.4rem;
+
+    @media (max-width: @breakPointM) {
+        grid-column: 2;
+        margin-top: 2rem;
+    }
+}
+
+.textInput {
+    @media (max-width: @breakPointM) {
+        grid-column: 2;
+    }
 }
 
 .submitButton {
@@ -81,6 +117,10 @@
 
     &:focus {
         box-shadow: none;
+    }
+
+    @media (max-width: @breakPointM) {
+        padding: 1rem;
     }
 }
 
