Speechbubble: smaller on smaller screens

--- a/src/components/QuestionUbi/Speechbubble/style.module.less
+++ b/src/components/QuestionUbi/Speechbubble/style.module.less
@@ -13,6 +13,10 @@
   .small & {
     padding-bottom: 1rem;
   }
+
+  @media (max-width: @breakPointS) {
+    padding-bottom: 1rem;
+  }
 }
 
 .svg {
@@ -35,6 +39,10 @@
   left: 0;
   right: 0;
 
+  @media (max-width: @breakPointS) {
+    bottom: 1rem;
+  }
+
   .small & {
     bottom: 1rem;
   }
@@ -45,6 +53,10 @@
   height: 2.1rem;
   left: 0;
   right: 0;
+
+  @media (max-width: @breakPointS) {
+    height: 1rem;
+  }
 
   .small & {
     height: 1rem;
