--- a/src/components/QuestionUbi/ListQuestions/style.module.less
+++ b/src/components/QuestionUbi/ListQuestions/style.module.less
@@ -31,3 +31,24 @@
     white-space: nowrap;
     font-size: @fontSizeXS;
 }
+
+.justSent {
+    animation-name: bounce;
+    animation-duration: .7s;
+    animation-iteration-count: 2;
+}
+
+@keyframes bounce {
+    0% {
+        transform: translateY(0);
+    }
+    20% {
+        transform: translateY(.5rem);
+    }
+    85% {
+        transform: translateY(-.1rem);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
